[package]
name = "rust-blockchain"
version = "0.1.0"
authors = ["Jean LELIEVRE <Jean.LELIEVRE@supinfo.com>"]
edit by = ["Zhantai Dan. <zhantai@email.cz>

[dependencies]
chrono = "0.4"
sha2 = "0.9.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
hex = "0.4"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
